k8s/eks/12-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: linuxmaster
  labels:
    app: linuxmaster
    tier: db
spec:
  type: ClusterIP
  selector:
    app: linuxmaster
    tier: db
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
